@@ -838,54 +838,3 @@ updateCapturedBeans ()
 	}
 }
 
-
-/**
-*  Fonction effectuant la procedure associe a un clic sur le bouton nouvelle Partie
-*  Cette fonction est appelee quand un clic sur le bouton nouvelle Partie est effectue.\n
-*  Selon l'event->Type declenchement de procedure differentes, modification de l'aspect des boutons\n
-*  et declenchement de la reinitialisation du plateau de jeu.
-*  @param widget pointeur sur le widget ayant declenche l'evenement eventDelete
-*  @param event pointeur sur le type d'evenement
-*  @param data un pointeur de type void, pour passer en argument a la fonction\n
-*  les elements graphiques a modifier.
-*  @return un entier
-*/
-static gint
-buttonNewGameClick (GRAPHICS_ELT *graphsElt)
-{
-	short int nbCapturedBean = 0;
-	BEANHOLE_LINK *ptLink;
-	int i;
-
-	nbCapturedBean =
-	  staticAwale->CapturedBeans[HUMAN] +
-	  staticAwale->CapturedBeans[COMPUTER];
-
-	/**
-	 *	Destruction de toute les graines et remise a zero compteur de capture 
-	 *	et indicateur nbre de graine par case
-	*/
-	for (ptLink = graphsElt->ptBeansHoleLink, i = 0;
-	     i < NBTOTALBEAN - nbCapturedBean; i++, ptLink++)
-	  {
-	    gtk_object_destroy (GTK_OBJECT (ptLink->beanPixbuf));
-	  }
-	
-	for (i = 0; i < NBHOLE; i++)
-	  {
-	    staticAwale->board[i] = NBBEANSPERHOLE;
-	    g_object_set (GTK_OBJECT
-			  (graphsElt->nbBeansHole[i]),
-			  "text", "4", NULL);
-	  }
-	
-	staticAwale->player = COMPUTER;
-
-	for (i = 0; i < NBPLAYER; i++)
-	  {
-	    staticAwale->CapturedBeans[i] = 0;
-	  }
-	
-	updateCapturedBeans ();
-	initBoardGraphics (graphsElt);
-}
